public enum Material {
    METAL,
    CUERO,
    MADERA,
    VIDRIO,
    PLASTICO,
    LIQUIDO,
    TEXTIL,
    GOMA,
    OTRO
}
