@startuml
'https://plantuml.com/class-diagram

skinparam Linetype ortho
title "Diagrama de clases - Ejercicio 17 Juancito Jaquer"

enum Material {
    METAL
    CUERO
    MADERA
    VIDRIO
    PLASTICO
    LIQUIDO
    TEXTIL
    GOMA
    OTRO
}

abstract class Objeto {
    - Material material
    - double volumen
    - ArrayList<Objeto> contenido

    + Objeto(String material, double volumen)
    + abstract void agregarObjeto(Objeto objeto)
    + ArrayList<Objeto> verContenido()
    + getters()
}

class Scanner {
    + escanear(Objeto objeto)
}

' relaciones
Objeto <.. Material
Scanner o-- Objeto

@enduml